--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Digital Styleguide</h1><hr>
         <img class="one" src="images/Logo_COLOUR.FEST.jpg" alt="Logo" width="150" height="60"/>
-        <h4 class="kleurstaal">Kleurstaal</h4>
+        <h4 class="kleurstaal">1 Kleurstaal</h4>
             <p class="kleur1"> #d268d9 | (296, 59.8%, 62.9%) | (210, 104, 217)</p>
             <p class="kleur2"> #d2c9df | (265, 25.6%, 83.1%) | (210, 201, 223)</p>
             <p class="kleur3"> #817298 | (264, 15.6%, 52.3%) | (129, 114, 152)</p>
@@ -19,12 +19,12 @@
             <p class="kleur5"> #b194f3 | (258, 79.8%, 76,7%) | (177, 148, 243)</p>
             <p class="kleur6"> #f5c9df | (330, 68.8%, 87.5%) | (245, 201, 223)</p>
 
-        <h4 class="lettertype">Lettertype</h4>
+        <h4 class="lettertype">2 Lettertype</h4>
             <p class="lettertype1">Titels: Oswald Regular, 30pt/36pt</p>
             <p class="lettertype2">Ondertitels: Oswald Light, 20pt/24pt</p>
             <p class="lettertype3">Tekst: Oswald ExtraLight, 12pt/15pt</p>
 
-        <h4 class="knoppen">Knoppen</h4>
+        <h4 class="knoppen">3 Knoppen</h4>
             <form class="knop1" action="https://www.example.com/login.php">
                 <p>Al reeds geregistreerd?</p>
                 <p>Gebruiksnaam:
@@ -32,6 +32,8 @@
                 </p>
                 <p>Wachtwoord:
                     <input type="wachtwoord" name="wachtwoord" size="20" maxlength="35"/>
+                    <input type="submit" name="Ga door" value="Ga door"/>
+                    <input type="submit" name="Ga door" value="Annuleer"/>
                 </p>
             </form>
             <form class="knop2" action="http://www.example.com/subscribe.php">
@@ -40,11 +42,32 @@
                 <input type="submit" name="Ga door" value="Schrijf je hier in"/>
             </form>
 
-        <h4 class="stijlen">Linken stijlen</h4>
+        <h4 class="stijlen">4 Linken stijlen</h4>
             <p class="stijl1"> Link</p>
             <p class="stijl2"> Hover</p>
             <p class="stijl3"> Visited</p>
             <p class="stijl4"> Active</p>
             <p class="stijl5"> Focous</p>
-    </body>
+        
+        <h4 class="navigatie">5 Navigatie</h4>
+        <div class="navigatie1">
+            <img src="images/3streepjes.jpg" alt="Nagivatie Menubalk" width="25" heigt="8">
+            <p>Our History</p>
+            <p>Line-up</p>
+            <p>Special</p>
+            <p>Praktisch</p>
+            <p>Tickets</p>
+            <p>Contact</p>
+        </div>
+
+        <h4 class="links">6 Links</h4>
+            <p class="link1"><a href="https://www.delijn.be/nl/" target="_blank">Kijk hier voor meer info voor de Lijn.</a></p>
+            <p class="link2"><a href="http://www.belgianrail.be/nl" target="_blank">Kijk hier voor meer info NMBS.</a></p>
+            <p class="link3"><a href="https://www.instagram.com/" target="_blank">Instagram, open app hier</a></p>
+            <p class="link4"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.538283025103!2d4.338880315747539!3d50.89525537953914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a004b423d%3A0x977e49885fe6830f!2sEeuwfeestlaan%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1527584229359" width="400" height="250" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+            <p class="link5"><iframe width="360" height="215" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>   
+        
+        <h4 class="iconen">7 Iconen</h4>
+        <img src="images/iconen.jpg" alt="iconen social media" width="300" height="90">
+    </body>    
 </html>
