--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -68,6 +68,7 @@
             <p class="link5"><iframe width="360" height="215" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>   
         
         <h4 class="iconen">7 Iconen</h4>
-        <img src="images/iconen.jpg" alt="iconen social media" width="300" height="90">
+        <img src="images/Icoontjes_apps.PNG" alt="iconen social media" width="250" height="50"><br>
+        <img src="images/sponsers.PNG" alt="sponsers" width="250" height="50"
     </body>    
 </html>
