--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -58,6 +58,7 @@
             <p>Praktisch</p>
             <p>Tickets</p>
             <p>Contact</p>
+            <param 
         </div>
 
         <h4 class="links">6 Links</h4>
